# Pinball2DMulti

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  agent_repo_setup.md  compose.yml  deploy.sh  index.html  package-lock.json  package.json  vite.config.ts  workflow.md
.claude/plans/: enumerated-jumping-tome.md
.githooks/: pre-commit
client/: Containerfile  index.html  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
client/src/: main.ts
client/src/board/: Ball.ts  Board.ts  BoardGeometry.ts  Flipper.ts  Launcher.ts  Pin.ts  flipperLogic.ts  launcherLogic.ts
client/src/game/: ClientBot.ts  Game.ts  InputManager.ts  gameConfig.ts
client/src/layers/: BoardLayer.ts  SphereDeepSpaceLayer.ts  UILayer.ts
client/src/physics/: PhysicsWorld.ts
client/src/shared/: DeepSpaceClient.ts  ServerConnection.ts  SphereDeepSpace.ts  types.ts  vec3.ts
client/src/utils/: geometry.ts
client/tests/: boardGeometry.test.ts  clientBot.test.ts  deepSpaceClient.test.ts  game.test.ts  gameConfig.test.ts  launcher.test.ts  physics.test.ts  serverConnection.test.ts  sphereDeepSpace.test.ts  vec3.test.ts
client_bevy/: .dockerignore  Cargo.toml  Containerfile  README.md  Trunk.toml  index.html  nginx.conf
client_bevy/src/: constants.rs  coord.rs  main.rs
client_bevy/src/board/: flipper_logic.rs  geometry.rs  launcher_logic.rs  mod.rs
client_bevy/src/game/: ball.rs  client_bot.rs  core.rs  deep_space.rs  flippers.rs  hud.rs  input.rs  launcher.rs  mod.rs  network.rs  pins.rs  walls.rs
client_bevy/src/game/hud/: mod.rs  spawn.rs  systems.rs  types.rs
client_bevy/src/layers/: mod.rs
client_bevy/src/shared/: connection.rs  mod.rs  net_state.rs  protocol.rs  types.rs  vec3.rs
deploy/: compose.yml  deploy.sh
docs/: README.md  decisions.md  design.md  first-issues.md  goals.md  onboarding.md
server/: Cargo.toml  Containerfile
server/src/: bot.rs  config.rs  deep_space.rs  game_loop.rs  lib.rs  main.rs  player.rs  protocol.rs  sphere.rs  state.rs  vec3.rs  ws.rs
server/tests/: integration.rs
shared/: Cargo.toml
shared/src/: config.rs  lib.rs  protocol.rs  vec3.rs
src/: constants.ts  main.ts
src/__tests__/: flipper.test.ts  launcher.test.ts  physics.test.ts
src/balls/: BallManager.ts
src/board/: Ball.ts  Board.ts  BoardGeometry.ts  BoardMetrics.ts  Flipper.ts  Launcher.ts  Pin.ts
src/deepSpace/: DeepSpaceBackend.ts  LocalDeepSpaceBackend.ts  ServerDeepSpaceBackend.ts  index.ts
src/game/: Game.ts  InputManager.ts
src/layers/: BoardLayer.ts  DeepSpaceLayer.ts  SphereDeepSpaceLayer.ts  UILayer.ts
src/physics/: PhysicsWorld.ts
src/shared/: DeepSpaceClient.ts  MockWorld.ts  ServerConnection.ts  SphereDeepSpace.ts  sphere.ts  types.ts  vec3.ts
tests/: flipper.test.ts  game.test.ts  physics.test.ts  serverConnection.test.ts  sphere.test.ts  sphereDeepSpace.test.ts  vec3.test.ts
work/task/: README.md  index.md
work/task/_template/: description.md  worklog.md
work/task/_template/agents/: README.md  agent-context.md
