[package]
name = "pinball-client-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.3", default-features = false, features = [
  "bevy_asset",
  "bevy_camera",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_log",
  "bevy_render",
  "bevy_sprite",
  "bevy_sprite_render",
  "bevy_state",
  "bevy_text",
  "bevy_window",
  "bevy_winit",
  "x11",
  "multi_threaded",
  "default_font",
  "png",
] }
bevy_rapier2d = { version = "0.32", default-features = false, features = ["dim2", "simd-stable"] }
bevy_prototype_lyon = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Placeholder for future WASM websocket implementation.
wasm-bindgen-futures = "0.4"
