[package]
name = "pinball-client-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.3", default-features = false, features = [
  "bevy_asset",
  "bevy_camera",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_log",
  "bevy_render",
  "bevy_sprite",
  "bevy_sprite_render",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "png",
  "webgl2",
] }
bevy_rapier2d = { version = "0.32", default-features = false, features = ["dim2", "simd-stable", "debug-render-2d"] }
bevy_prototype_lyon = "0.15"
bevy_transform_interpolation = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
pinball-shared = { path = "../shared" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.17.3", default-features = false, features = ["x11", "multi_threaded"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "=0.4.53"
gloo-timers = "0.3"
wasm-bindgen = "=0.2.103"
web-sys = { version = "=0.3.80", features = [
  "Window",
  "Performance",
  "Location",
  "WebSocket",
  "Event",
  "ErrorEvent",
  "MessageEvent",
] }
