[package]
name = "pinball-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
tokio-tungstenite = "0.26"

[[bin]]
name = "loadtest"
path = "src/bin/loadtest.rs"
