[package]
name = "pinball-server"
version = "0.1.0"
edition = "2021"
default-run = "pinball-server"

[lib]
name = "pinball_server"
path = "src/lib.rs"

[[bin]]
name = "pinball-server"
path = "src/main.rs"

[[bin]]
name = "loadtest"
path = "src/bin/loadtest.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
tokio-tungstenite = "0.26"

[dev-dependencies]
tokio-tungstenite = "0.26"
